<resources>
    <string name="app_name" translatable="false">PUZZ</string>
    <string name="answer">A N S W E R</string>
    <string name="hint">HINT</string>
    <string name="level">Level </string>
    //lvl one
    <string name="question_level_one">How many bees are there?</string>
    <string name="hint_level_one">Have you tried touching the bees? they must sting…</string>
    //lvl two
    <string name="question_level_two">swipe to left</string>
    <string name="hint_level_two">Maybe you should read carefully</string>
    //lvl three
    <string name="question_level_three">How many cakes are there?</string>
    <string name="hint_level_three">This dinosaur loves cake !!</string>
    //lvl four
    <string name="question_level_four">Water the plant</string>
    <string name="hint_level_four">Water \"the plant\"</string>
    //lvl five
    <string name="question_level_five">Find the pancake</string>
    <string name="hint_level_five">Maybe you should learn how to cook</string>
    //lvl six
    <string name="question_level_six">Find the brown ball</string>
    <string name="hint_level_six">Try mixing colors</string>
    //lvl seven
    <string name="question_level_seven">Find the green ball</string>
    <string name="hint_level_seven">Try mixing colors</string>
    //lvl eight
    <string name="question_level_eight">Find a white color</string>
    <string name="hint_level_eight">Any white color does not have to be a ball</string>
    //lvl nine
    <string name="question_level_nine">Find the differences</string>
    <string name="hint_level_nine">This is so difficult! they look the same</string>
    //lvl nine
    <string name="question_level_ten">Find the yellow panda</string>
    <string name="hint_level_ten">Look for a yellow paint</string>
    //lvl elven
    <string name="question_level_eleven">Find the elephant\'s baby</string>
    <string name="hint_level_eleven">The lion looks suspicious </string>
    //lvl twelve
    <string name="question_level_twelve">Find the cat above this text</string>
    <string name="hint_level_twelve">Move the text around</string>
    //lvl thirteen
    <string name="question_level_thirteen">Burn EVERYTHING</string>
    <string name="hint_level_thirteen">Burn \"everything\"</string>
    //lvl fourteen
    <string name="question_level_fourteen">Fix the controller</string>
    <string name="hint_level_fourteen">it\'s not plugged in </string>
    //lvl fifteen
    <string name="question_level_fifteen">Make a popcorn</string>
    <string name="hint_level_fifteen">Find a lighter </string>
    //profile
    <string name="share_text">\nI\'m in level %1d! \n Check out this game and share your progress:\n\n</string>
    <string name="share_progress">Share Progress</string>
    <string name="levels_unlocked">Levels Unlocked:</string>
    <string name="your_progress">Your progress:</string>
    //settings
    <string name="rate_us">RATE APP</string>
    <string name="contact">CONTACT</string>
    <string name="help">HELP</string>
    <string name="share">SHARE</string>
</resources>