<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/card_background"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <ImageButton
                android:id="@+id/rate"
                style="@style/Button3DYellow"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/contact"
                style="@style/Button3DYellow"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rate" />

            <ImageButton
                android:id="@+id/share"
                style="@style/Button3DYellow"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact" />

            <ImageButton
                android:id="@+id/help"
                style="@style/Button3DYellow"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/share" />

            <TextView
                android:id="@+id/rate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/rate_us"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/rate"
                app:layout_constraintEnd_toEndOf="@+id/rate"
                app:layout_constraintStart_toStartOf="@+id/rate"
                app:layout_constraintTop_toTopOf="@+id/rate"
                app:layout_constraintVertical_bias="0.393" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_star"
                app:layout_constraintBottom_toBottomOf="@+id/rate_text"
                app:layout_constraintStart_toStartOf="@+id/rate"
                app:layout_constraintTop_toTopOf="@+id/rate_text" />

            <TextView
                android:id="@+id/contact_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/contact"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/contact"
                app:layout_constraintEnd_toEndOf="@+id/contact"
                app:layout_constraintStart_toStartOf="@+id/contact"
                app:layout_constraintTop_toTopOf="@+id/contact"
                app:layout_constraintVertical_bias="0.393" />

            <TextView
                android:id="@+id/contact_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SHARE"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/share"
                app:layout_constraintEnd_toEndOf="@+id/share"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="@+id/share"
                app:layout_constraintTop_toTopOf="@+id/share"
                app:layout_constraintVertical_bias="0.454" />

            <TextView
                android:id="@+id/help_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/help"
                app:layout_constraintEnd_toEndOf="@+id/help"
                app:layout_constraintStart_toStartOf="@+id/help"
                app:layout_constraintTop_toTopOf="@+id/help"
                app:layout_constraintVertical_bias="0.454" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_email"
                app:layout_constraintBottom_toBottomOf="@+id/contact_text"
                app:layout_constraintStart_toStartOf="@+id/contact"
                app:layout_constraintTop_toTopOf="@+id/contact_text" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_share_dark"
                app:layout_constraintBottom_toBottomOf="@+id/contact_text2"
                app:layout_constraintStart_toStartOf="@+id/share"
                app:layout_constraintTop_toTopOf="@+id/contact_text2" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_help"
                app:layout_constraintBottom_toBottomOf="@+id/help_text"
                app:layout_constraintStart_toStartOf="@+id/help"
                app:layout_constraintTop_toTopOf="@+id/help_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/celebrate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="sparks.json"
        app:lottie_loop="true" />

</androidx.constraintlayout.widget.ConstraintLayout>