<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/card_background"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/area"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/circle"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView4" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/circle"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                app:tint="#FFEB3B" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/circle"
                app:layout_constraintBottom_toBottomOf="@+id/next"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/next"
                app:tint="@color/blue" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_level_eleven"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/next" />

            <ImageView
                android:id="@+id/baby"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/elephant"
                app:layout_constraintBottom_toBottomOf="@+id/lion"
                app:layout_constraintEnd_toEndOf="@+id/lion"
                app:layout_constraintStart_toStartOf="@+id/lion"
                app:layout_constraintTop_toTopOf="@+id/lion" />

            <ImageView
                android:id="@+id/lion"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="32dp"
                android:src="@drawable/lion"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:id="@+id/elephant"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginEnd="32dp"
                android:src="@drawable/elephant"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/app_theme"
                android:visibility="invisible"
                app:icon="@drawable/ic_next"
                app:iconGravity="end"
                app:iconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/right"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_check"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/next"
                app:layout_constraintEnd_toEndOf="@+id/next"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/next"
                app:tint="@color/green" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/celebrate"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="false"
        app:lottie_fileName="celebrate.json"
        app:lottie_loop="true" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/card_background"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hint_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/idea"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toStartOf="@+id/expand"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:text="@string/hint_level_eleven"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/expand"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_expand_arrow"
                app:iconGravity="end"
                app:iconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>